@@ -1,3 +1,7 @@
+2019-11-08 Magnus Hagdorn
+ * piccolo3/client/PiccoloBaseClient.py: when getting protocol to talk to
+   piccolo server test connection, retry until it works
+
 2019-08-02 Magnus Hagdorn
  * piccolo3/client/PiccoloScheduler.py: add functionality to
    suspend/unsuspend/delete jobs
